5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1760_1577.log
== TEST (2019-05-29 14:01:34) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleração do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t=0
v = array(arange(n))
v = zeros(n)
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:02:15) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleração do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t=0
v = arange(n)
v = zeros(n)
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:03:44) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleração do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t=0
v = arange(5)
v = zeros(5)
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:20) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracão do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t=0
v = arange(5)
v = zeros(5)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:51) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t=0
v = array(arange(n))
v = zeros(n)
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:57) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t=0
d = array(arange(n))
d = zeros(n)

t = array(arange(n))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:22) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))

d = array(arange(n))
d = zeros(n)

t = array(arange(n))

i = 0

while (i != n):
		d = [(ac*(t**2)/2) + v0]
		
		i = i + 1
		
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:28) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n))
d = zeros(n)

t = array(arange(n))

i = 0

while (i != n):
		d = [(ac*(t**2)/2) + v0]
		
		i = i + 1
		
print(d)

-- ERROR:
File "XXXX", line 7
    d = arange(n))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:33) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = array(arange(n))

i = 0

while (i != n):
		d = [(ac*(t**2)/2) + v0]
		
		i = i + 1
		
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:29) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d = [(ac*(t**2)/2) + v0]
		
		i = i + 1
		
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:32:42) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d = [(ac*(t**2)/2) + v0]
		
		i = i + 1
		
print(d)

-- EXECUTION TIME:
0.514404
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[array([ 3.4,  4. ,  5.8,  8.8, 13. , 18.4, 25. , 32.8, 41.8, 52. , 63.4,
       76. ])]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[array([  76.5,   81.4,   96.1,  120.6,  154.9,  199. ,  252.9,  316.6,
        390.1,  473.4,  566.5,  669.4,  782.1,  904.6, 1036.9, 1179. ,
       1330.9, 1492.6, 1664.1, 1845.4, 2036.5, 2237.4, 2448.1, 2668.6,
       2898.9, 3139. , 3388.9, 3648.6, 3918.1, 4197.4, 4486.5, 4785.4,
       5094.1, 5412.6, 5740.9, 6079. , 6426.9, 6784.6, 7152.1, 7529.4,
       7916.5, 8313.4, 8720.1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:09) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)
print(d)
i = 0

while (i != n):
		d = [(ac*(t**2)/2) + v0]
		
		i = i + 1
		
print(d)
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:57) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d =(ac*(t**2)/2) + v0
		
		i = i + 1
		
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:35:59) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d =(ac*(t**2)/2) + v0
		
		i = i + 1
		
print(d)


-- EXECUTION TIME:
0.34553
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 3.4  4.   5.8  8.8 13.  18.4 25.  32.8 41.8 52.  63.4 76. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  76.5   81.4   96.1  120.6  154.9  199.   252.9  316.6  390.1  473.4
  566.5  669.4  782.1  904.6 1036.9 1179.  1330.9 1492.6 1664.1 1845.4
 2036.5 2237.4 2448.1 2668.6 2898.9 3139.  3388.9 3648.6 3918.1 4197.4
 4486.5 4785.4 5094.1 5412.6 5740.9 6079.  6426.9 6784.6 7152.1 7529.4
 7916.5 8313.4 8720.1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:22) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d =(ac*(t**2)/2) + v0
		
		i = i + 1
		
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:37) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d =(ac*(t**2)/2) + v0
		
		i = i + 1
		
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:59:53) 
-- CODE:
from numpy import*

ac = float(input("digite a aceleracao do carro: "))
v0 = float(input("digite a velocidade inicial do carro: "))
n = int(input("digite a valor n: "))
t = 0
d = arange(n)
d = zeros(n)

t = arange(n)

i = 0

while (i != n):
		d =(ac*(t**2)/2) + v0
		
		i = i + 1
		
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
